// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RolesDetailsPanel /> renders Roles detailsPanel 1`] = `
<styled.div
  id="dtpanel-roles"
>
  Mock Child
  <Connect(DetailWrapper)
    data-automation="rolesPermissionsSVG"
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text="Permissions"
      userHasUpdatePermission={true}
    />
    <_class
      deleteSubEntity={[Function]}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<RolesDetailsPanel /> renders Roles detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-roles"
>
  Mock Child
  <Connect(DetailWrapper)
    data-automation="rolesPermissionsSVG"
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text="Permissions"
      userHasUpdatePermission={false}
    />
    <_class
      tableType="sidePanel"
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<RolesDetailsPanel /> renders Roles detailsPanel with status disabled 1`] = `
<styled.div
  id="dtpanel-roles"
>
  Mock Child
  <Connect(DetailWrapper)
    data-automation="rolesPermissionsSVG"
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text="Permissions"
      userHasUpdatePermission={true}
    />
    <_class
      deleteSubEntity={[Function]}
      tableType="sidePanel"
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;
